Updated API doc and a simple hot fix
